# decimojo

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  division.mojo  mojoproject.toml  pixi.toml
.github/workflows/: run_tests.yaml
benches/: bench.mojo  bench_add.mojo  bench_comparison.mojo  bench_divide.mojo  bench_exp.mojo  bench_float_constructor.mojo  bench_floor_divide.mojo  bench_from_float.mojo  bench_from_string.mojo  bench_ln.mojo  bench_logic.mojo  bench_modulo.mojo  bench_multiply.mojo  bench_power.mojo  bench_quantize.mojo  bench_root.mojo  bench_round.mojo  bench_sqrt.mojo  bench_subtract.mojo  run_bench.sh
benches/bigdecimal/: bench.mojo  bench_bigdecimal_add.mojo  bench_bigdecimal_divide.mojo  bench_bigdecimal_exp.mojo  bench_bigdecimal_ln.mojo  bench_bigdecimal_multiply.mojo  bench_bigdecimal_root.mojo  bench_bigdecimal_root_multi.mojo  bench_bigdecimal_round.mojo  bench_bigdecimal_scale_up_by_power_of_10.mojo  bench_bigdecimal_sqrt.mojo  (+1 more)
decimal/: decimal.mojo
decimojo/: __init__.mojo  decimal.mojo  logic.mojo  mathematics.mojo  prelude.mojo  rounding_mode.mojo  utility.mojo
docs/: README_ZH.md  api.md  changelog.md  changelog_unreleased.md  examples.md  examples_on_bdec.mojo  examples_on_bigdecimal.mojo  examples_on_bigint.mojo  examples_on_bigint10.mojo  examples_on_decimal128.mojo  internal_notes.md  readme_toml.md  readme_tomlmojo.md  readme_unreleased.md  readme_zht.md  todo.md  user_manual.md  user_manual_cli.md  v0.8.0_benchmark_report.md
examples/: examples.mojo
python/: README.md  decimo.py  decimo_module.mojo  pyproject.toml
python/src/decimo/: __init__.py  _decimo.pyi
python/tests/: test_decimo.py
src/: errors.mojo
src/cli/: main.mojo
tests/: test_all.sh  test_arithmetics.mojo  test_big.sh  test_bigdecimal.sh  test_bigint.sh  test_bigint10.sh  test_biguint.sh  test_binary.sh  test_cli.sh  test_comparison.mojo  test_conversions.mojo  test_creation.mojo  test_decimal128.sh  test_decimal_arithmetics.mojo  test_decimal_conversions.mojo  test_decimal_creation.mojo  test_decimal_logic.mojo  test_decimal_mathematics.mojo  test_decimal_rounding.mojo  test_decimo.sh  test_divide.mojo  test_division.mojo  test_exp.mojo  test_factorial.mojo  test_from_components.mojo  test_ln.mojo  test_logic.mojo  test_mathematics.mojo  test_multiply.mojo  test_power.mojo  test_root.mojo  test_round.mojo  test_rounding.mojo  test_sqrt.mojo  test_string_based_operations.mojo  test_to_float.mojo  test_to_int.mojo  test_to_string.mojo  test_toml.sh  test_tomlmojo.sh  (+1 more)
(+373 files in other folders)
